# DivinityEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: pch.h
include/Core/Input/: InputManager.h  KeyBoard.h  LogicalInputDevice.h  Mouse.h
include/Core/Math/: Position2D.h  Rect.h
include/Core/Windowing/: IMessageQueue.h  IWindow.h
src/: CMakeLists.txt
src/Core/Input/: InputManager.cpp
src/Core/Windowing/: IMessageQueue.cpp
tests/: CMakeLists.txt  InputManagerTests.cpp  KeyboardUnitTests.cpp  MouseUnitTests.cpp
